--- a/frontend/html/templates/by_port.tmpl
+++ b/frontend/html/templates/by_port.tmpl
@@ -1,6 +1,6 @@
 {{define "by_port"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2016-02-27 20:38:50 krylon> */}}
+{{/* Time-stamp: <2016-02-29 07:21:56 krylon> */}}
 <!DOCTYPE html>
 <html>
   <head>
@@ -30,6 +30,13 @@
 
      
     </script>
+
+    <script type="text/javascript">
+     $(document).ready(function() {
+       $('.filter_checkbox').each(function () {
+         $(this).checked = false;
+       });
+    </script>
   </head>
 
   <body>
@@ -48,28 +55,28 @@
     </div>
     {{end}}
 
-    <table>
+    <table class="horizontal">
       <caption>Table of contents</caption>
       <thead>
         <tr>
           <th>Port</th>
           <th>No. of hosts</th>
-          <th>Anzeigen?</th>
+          <th>Ausblenden?</th>
         </tr>
       </thead>
 
       <tbody>
         {{range .Ports}}
         <tr>
-          <td><a href="#port_{{.Port}}">{{.Port}}</a></td>
+          <th><a href="#port_{{.Port}}">{{.Port}}</a></td>
           <td>{{len .Results}}</td>
           <td>
-            <input type="checkbox" onchange="toggle_port_visibility({{.Port}}, this.checked)">
+            <input type="checkbox" onchange="toggle_port_visibility({{.Port}}, this.checked)" id="checkbox_{{.Port}}" class="filter_checkbox">
           </td>
         </tr>
         {{end}}
         <tr>
-          <td>Total</td>
+          <th>Total</td>
           <td><b>{{.Count}}</b></td>
         </tr>
       </tbody>
