Added report by host, working on metadata (location, OS)

--- a/frontend/html/templates/index.tmpl
+++ b/frontend/html/templates/index.tmpl
@@ -1,6 +1,6 @@
 {{define "index"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2016-02-13 20:40:01 krylon> */}}
+{{/* Time-stamp: <2016-08-17 18:23:10 krylon> */}}
 <!DOCTYPE html>
 <html>
   <head>
@@ -32,6 +32,8 @@
     </div>
     <hr />
     {{end}}
+
+    {{ template "menu" }}
 
     Current state of Guang:
     <table class="horizontal">
