--- a/frontend/html/templates/by_port.tmpl
+++ b/frontend/html/templates/by_port.tmpl
@@ -1,6 +1,6 @@
 {{define "by_port"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2016-02-29 07:21:56 krylon> */}}
+{{/* Time-stamp: <2016-08-17 18:23:28 krylon> */}}
 <!DOCTYPE html>
 <html>
   <head>
@@ -55,6 +55,8 @@
     </div>
     {{end}}
 
+    {{ template "menu" }}
+
     <table class="horizontal">
       <caption>Table of contents</caption>
       <thead>
@@ -68,7 +70,7 @@
       <tbody>
         {{range .Ports}}
         <tr>
-          <th><a href="#port_{{.Port}}">{{.Port}}</a></td>
+          <td><a href="#port_{{.Port}}">{{.Port}}</a></td>
           <td>{{len .Results}}</td>
           <td>
             <input type="checkbox" onchange="toggle_port_visibility({{.Port}}, this.checked)" id="checkbox_{{.Port}}" class="filter_checkbox">
