--- a/frontend/html/templates/by_host.tmpl
+++ b/frontend/html/templates/by_host.tmpl
@@ -1,20 +1,9 @@
 {{ define "by_host" }}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2022-10-31 20:55:47 krylon> */}}
+{{/* Time-stamp: <2022-11-01 00:53:57 krylon> */}}
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{.Title}}</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css" />
-    <script type="text/javascript" src="/static/jquery-3.6.1.min.js">
-    </script>
-
-    <script type="text/javascript" src="/static/underscore.js">
-    </script>
-
-    <script type="text/javascript" src="/static/interact.js">
-    </script>
-  </head>
+  {{ template "head" . }}
 
   <body>
     <h1>{{ .Title }}</h1>
@@ -24,9 +13,11 @@
     Page was rendered on {{ now }}
     {{ end }}
 
+    {{ template "beacon" . }}
+
     {{ template "menu" }}
 
-    <table border="1" borderwidth="1">
+    <table class="table">
       <thead>
         <tr>
           <th>IP</th>
