--- a/frontend/html/templates/by_port.tmpl
+++ b/frontend/html/templates/by_port.tmpl
@@ -1,6 +1,6 @@
 {{define "by_port"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2022-11-05 02:45:53 krylon> */}}
+{{/* Time-stamp: <2022-11-07 21:33:18 krylon> */}}
 <!DOCTYPE html>
 <html>
   {{ template "head" . }}
@@ -25,7 +25,7 @@
 
     {{ template "menu" }}
 
-    <script type="text/javascript">
+    <script>
      function toggle_port_visibility(n, do_hide) {
        const containerID = `#content_port_${n}`
        if (do_hide) {
@@ -34,15 +34,93 @@
          $(containerID).show()
        }
      }
-    </script>
 
-    <script type="text/javascript">
+     let updateStamp = timeStampUnix()
+
+     function update_results() {
+       try {
+         if (!settings.update.active) {
+           return
+         }
+         
+         // const timestamp = timeStampUnix()
+         const addr = `/ajax/port_recent/${updateStamp}`
+
+         const req = $.get(addr,
+                           {},
+                           (response) => {
+           if (response.Status) {
+             for (const [port, responses] of Object.entries(response.Results)) {
+               const tid = `#tbody_${port}`
+               const tbody = $(tid)[0]
+
+               for (const r of responses.values()) {
+                 console.log(r)
+                 
+                 const row = `<tr>
+                 <td>${r.Host.Name} (${r.Host.Address})</td>
+                 <td>${r.Stamp}</td>
+                 <td><pre>${r.Reply}</pre></td>
+                 </tr>`
+
+                 tbody.innerHTML += row
+               }
+             }
+
+             updateStamp = timeStampUnix()
+           }
+         },
+                           'json'
+                           ).fail((reply, status, text) => {
+           const msg = `Failed to load update: ${status} -- ${reply} -- ${text}`
+           console.log(msg)
+           alert(msg)
+         })
+
+       } finally {
+         window.setTimeout(update_results, settings.update.interval)
+       }
+     } // function update_results ()
+
+     function updateToggle () {
+       settings.update.active = !settings.update.active
+       saveSetting('update', 'active', settings.update.active)
+     } // function updateToggle ()
+
      $(document).ready(() => {
        $('.filter_checkbox').each(() => {
          $(this).checked = false
        })
+
+       $('.port_results').show()
+       $('#toggle_update')[0].checked = settings.update.active
+       window.setTimeout(update_results, settings.update.interval)
      })
     </script>
+
+    <hr />
+
+    <div class="container">
+      <div class="row">
+        <div class="col col-sm-4">
+          <table class="table horizontal">
+            <tr>
+              <th>Refresh?</th>
+              <td>
+                <div class="form-check form-switch filter_checkbox">
+                  <input class="form-check-input" type="checkbox"
+                         onchange="updateToggle()"
+                         id="toggle_update"
+                         />
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <hr />
 
     <table class="horizontal caption-top">
       <caption>Table of contents</caption>
@@ -56,7 +134,7 @@
 
       <tbody>
         {{range .Ports}}
-        <tr>
+        <tr id="toc_{{.Port}}">
           <td>
             <a href="#port_{{.Port}}">{{.Port}}</a>
           </td>
@@ -74,13 +152,13 @@
         {{end}}
         <tr>
           <th>Total</td>
-          <td><b>{{.Count}}</b></td>
+          <td id="toc_total"><b>{{.Count}}</b></td>
         </tr>
       </tbody>
     </table>
 
     {{ range .Ports }}
-    <div id="content_port_{{.Port}}">
+    <div id="content_port_{{.Port}}" class="port_results">
       <hr />
 
       <table class="table caption-top">
@@ -93,7 +171,7 @@
           </tr>
         </thead>
 
-        <tbody id="tbody{{.Port}}">
+        <tbody id="tbody_{{.Port}}">
           {{$row_class := cycle "even" "odd"}}
           {{ range .Results }}
           <tr class="{{$row_class.Next}} port_{{ .Port }}">
