--- a/frontend/html/static/style.css
+++ b/frontend/html/static/style.css
@@ -1,4 +1,4 @@
-/* Time-stamp: <2022-11-08 18:31:20 krylon> */
+/* Time-stamp: <2022-11-11 23:14:38 krylon> */
 
 body { font-family: Arial,Helvetica; }
 
@@ -36,5 +36,15 @@ table.horizontal * td { text-align: left; }
 caption {
     font-size: 16pt;
     text-decoration: underline;
+    font-weight: bold;
+}
+
+counter {
+    font-size: 24pt;
+    font-weight: bold;
+}
+
+pushbutton {
+    font-size: 36pt;
     font-weight: bold;
 }
