--- a/frontend/html/templates/controlpanel.tmpl
+++ b/frontend/html/templates/controlpanel.tmpl
@@ -1,6 +1,6 @@
 {{ define "controlpanel" }}
 {{/* Created on 08. 11. 2022 */}}
-{{/* Time-stamp: <2022-11-09 00:56:14 krylon> */}}
+{{/* Time-stamp: <2022-11-12 00:22:06 krylon> */}}
 <div id="controlpanel" class="container-fluid">
   <table class="table horizontal caption-top">
     <tr>
@@ -8,31 +8,52 @@
         Generators
       </th>
       <td>
-        <input type="number"
-               id="cnt_generator"
-               min="0"
-               max="1024"
-               />
+        <div id="cnt_gen" class="counter">
+          0
+        </div>
+      </td>
+      <td>
+        <button class="btn btn-light pushbutton">
+          +
+        </button>
+        &nbsp;
+        <button class="btn btn-light pushbutton">
+          -
+        </button>
       </td>
     </tr>
     <tr>
       <th>XFR</th>
       <td>
-        <input type="number"
-               id="cnt_xfr"
-               min="0"
-               max="1024"
-               />
+        <div id="cnt_xfr" class="counter">
+          0
+        </div>
+      </td>
+      <td>
+        <button class="btn btn-light pushbutton">
+          +
+        </button>
+        &nbsp;
+        <button class="btn btn-light pushbutton">
+          -
+        </button>
       </td>
     </tr>
     <tr>
       <th>Scanners</th>
       <td>
-        <input type="number"
-               id="cnt_scan"
-               min="0"
-               max="1024"
-               />
+        <div id="cnt_scan" class="counter">
+          0
+        </div>
+      </td>
+      <td>
+        <button class="btn btn-light pushbutton">
+          +
+        </button>
+        &nbsp;
+        <button class="btn btn-light pushbutton">
+          -
+        </button>
       </td>
     </tr>
   </table>
