Control panel - add icons for buttons

--- a/frontend/html/templates/controlpanel.tmpl
+++ b/frontend/html/templates/controlpanel.tmpl
@@ -1,6 +1,6 @@
 {{ define "controlpanel" }}
 {{/* Created on 08. 11. 2022 */}}
-{{/* Time-stamp: <2022-11-12 00:22:06 krylon> */}}
+{{/* Time-stamp: <2022-11-12 22:34:24 krylon> */}}
 <div id="controlpanel" class="container-fluid">
   <table class="table horizontal caption-top">
     <tr>
@@ -14,11 +14,11 @@
       </td>
       <td>
         <button class="btn btn-light pushbutton">
-          +
+          <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
         <button class="btn btn-light pushbutton">
-          -
+          <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
     </tr>
@@ -31,11 +31,11 @@
       </td>
       <td>
         <button class="btn btn-light pushbutton">
-          +
+          <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
         <button class="btn btn-light pushbutton">
-          -
+          <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
     </tr>
@@ -48,11 +48,11 @@
       </td>
       <td>
         <button class="btn btn-light pushbutton">
-          +
+          <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
         <button class="btn btn-light pushbutton">
-          -
+          <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
     </tr>
