--- a/frontend/html/templates/controlpanel.tmpl
+++ b/frontend/html/templates/controlpanel.tmpl
@@ -1,7 +1,11 @@
 {{ define "controlpanel" }}
 {{/* Created on 08. 11. 2022 */}}
-{{/* Time-stamp: <2022-11-12 22:34:24 krylon> */}}
+{{/* Time-stamp: <2022-11-14 23:05:44 krylon> */}}
 <div id="controlpanel" class="container-fluid">
+  <script src="/static/controlpanel.js"></script>
+  <script>
+   $(document).ready(loadWorkerCount)
+  </script>
   <table class="table horizontal caption-top">
     <tr>
       <th>
@@ -9,15 +13,17 @@
       </th>
       <td>
         <div id="cnt_gen" class="counter">
-          0
+          ?
         </div>
       </td>
       <td>
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="spawn('Generator')">
           <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="stop('Generator')">
           <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
@@ -26,15 +32,17 @@
       <th>XFR</th>
       <td>
         <div id="cnt_xfr" class="counter">
-          0
+          ?
         </div>
       </td>
       <td>
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="spawn('XFR')">
           <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="stop('XFR')">
           <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
@@ -43,15 +51,17 @@
       <th>Scanners</th>
       <td>
         <div id="cnt_scan" class="counter">
-          0
+          ?
         </div>
       </td>
       <td>
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="spawn('Scanner')">
           <img src="/static/icons8-plus-math-60.png" width=32" height="32" />
         </button>
         &nbsp;
-        <button class="btn btn-light pushbutton">
+        <button class="btn btn-light pushbutton"
+                onclick="stop('Scanner')">
           <img src="/static/icons8-minus-48.png" width=32" height="32" />
         </button>
       </td>
