--- a/frontend/html/templates/by_port.tmpl
+++ b/frontend/html/templates/by_port.tmpl
@@ -1,6 +1,6 @@
 {{define "by_port"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2022-11-17 17:12:21 krylon> */}}
+{{/* Time-stamp: <2022-11-24 18:41:54 krylon> */}}
 <!DOCTYPE html>
 <html>
   {{ template "head" . }}
@@ -89,7 +89,7 @@
 
     <hr />
 
-    <details>
+    <details open="true">
       <summary>Table of Contents</summary>
       <table class="horizontal caption-top">
         <caption>Table of contents</caption>
