--- a/frontend/html/templates/by_port.tmpl
+++ b/frontend/html/templates/by_port.tmpl
@@ -1,6 +1,6 @@
 {{define "by_port"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2022-11-24 18:41:54 krylon> */}}
+{{/* Time-stamp: <2023-01-06 18:18:33 krylon> */}}
 <!DOCTYPE html>
 <html>
   {{ template "head" . }}
@@ -46,6 +46,8 @@
        window.setTimeout(update_results, settings.update.interval)
      })
     </script>
+
+    {{ template "msgbox" . }}
 
     <hr />
 
