Update metadata asynchronously - expose in web frontend

--- a/frontend/html/templates/menu.tmpl
+++ b/frontend/html/templates/menu.tmpl
@@ -1,6 +1,6 @@
 {{define "menu"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2022-11-01 00:31:27 krylon> */}}
+{{/* Time-stamp: <2023-04-08 20:09:44 krylon> */}}
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D4D4D4">
   <div class="container-fluid">
@@ -17,6 +17,12 @@
 
         <li class="nav-item">
           <a class="nav-link" href="/by_host">Scanned Hosts</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/ajax/update_metadata">
+            Update metadata
+          </a>
         </li>
         
       </ul>
