--- a/frontend/html/templates/menu.tmpl
+++ b/frontend/html/templates/menu.tmpl
@@ -1,6 +1,6 @@
 {{define "menu"}}
 {{/* -*- mode: web; coding: utf-8; -*- */}}
-{{/* Time-stamp: <2023-04-08 20:09:44 krylon> */}}
+{{/* Time-stamp: <2023-05-19 15:40:14 krylon> */}}
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #D4D4D4">
   <div class="container-fluid">
@@ -20,9 +20,9 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/ajax/update_metadata">
+          <button class="btn btn-light" onclick="updateMeta();">
             Update metadata
-          </a>
+          </button>
         </li>
         
       </ul>
